--- a/index.html
+++ b/index.html
@@ -5,34 +5,37 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
 
   <link rel="icon" type="image/png" sizes="32x32" href="./assets/images/favicon-32x32.png">
+  <link rel="stylesheet" href="index.css">
   
   <title>Frontend Mentor | Conference ticket generator</title>
 
   <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
+  <!-- <style>
     .attribution { font-size: 11px; text-align: center; }
     .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
+  </style> -->
 </head>
+
 <body>
- <div>
-      <img src="C:\Users\HP\Downloads\conference-ticket-generator-main\conference-ticket-generator-main\assets\images\logo-full.svg" alt="Logo">
-      <h4>Coding Conf</h4>
+  <div class="container">
+   <div class="top-head">
+   <img src="./assets/images/logo-full.svg" alt="Logo" width="13%" height="auto">
    </div>
    <div>
     <h1>Your Journey to Coding Conf 2025 Starts Here!</h1>
     <h6>  Secure your spot at next year's biggest coding conference.</h6>
    </div>
-  
-   <div>
+  </div>
+  <div class="form">
     <form action=""></form>
     <div>
-    <label for="Avatar">Upload Avatar</label>
-    <input type="file" accept="image/jpg, image/jpeg, image/png" name = "Avatar" id = "Avatar" hidden></div>
+     <label for="Avatar">Upload Avatar</label>
+     <input type="file" accept="image/jpg, image/jpeg, image/png" name = "Avatar" id = "Avatar" hidden>
+    </div>
     <div>
-      <img src="C:\Users\HP\Downloads\conference-ticket-generator-main\conference-ticket-generator-main\assets\images\icon-upload.svg" alt="">
+      <img src="./assets/images/icon-upload.svg" alt="">
       <p>Drag and drop or click to upload</p>
-      <img src="C:\Users\HP\Downloads\conference-ticket-generator-main\conference-ticket-generator-main\assets\images\icon-info.svg" alt="">
+      <img src="./assets/images/icon-info.svg" alt="">
       <p>Upload your photo (JPG or PNG, max size: 500KB).</p>
     </div>
     <div>
@@ -48,8 +51,7 @@
       <input type="text" id="gitname" name="gitname">
     </div>
     <button>Generate my Ticket</button>
-   </div>
-  
+  </div>
   <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge">Frontend Mentor</a>. 
     Coded by <a href="#">Azka Zubish</a>.
