completed ticket.html design

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   <div class="container">
    <div class="header">
      <div class="top-head">
-     <img id="logo-full" src="./assets/images/logo-full.svg" alt="Logo">
+     <img class="logo-full" src="./assets/images/logo-full.svg" alt="Logo">
      </div>
      <div>
      <h1><div>Your Journey to Coding Conf</div><div>2025 Starts Here!</div></h1>
