rendering of ticket with user-submitted information complete

--- a/index.html
+++ b/index.html
@@ -75,6 +75,9 @@
         <span class="span-error"></span>
       </div>
     </div>
+    <div>
+      <input type="hidden" name="ticketNo" id="ticketNo" value="#000000">
+    </div>
       <button type="submit" class="form-submit-button">Generate my Ticket</button>
     </form>
   </div> 
