--- a/index.html
+++ b/index.html
@@ -24,7 +24,19 @@
      <img class="logo-full" src="./assets/images/logo-full.svg" alt="Logo">
      </div>
      <div>
-     <h1><div>Your Journey to Coding Conf</div><div>2025 Starts Here!</div></h1>
+      <h1>
+        <span class="visually-hidden">Your Journey to Coding Conf 2025 Starts Here!</span>
+
+          <!-- Visible only on desktop -->
+        <div class="desktop-line" aria-hidden="true">Your Journey to Coding Conf</div>
+        <div class="desktop-line" aria-hidden="true">2025 Starts Here!</div>
+
+          <!-- Visible only on mobile -->
+         <div class="mobile-line" aria-hidden="true">Your Journey to Coding</div>
+         <div class="mobile-line" aria-hidden="true">Conf 2025 Starts Here!</div>
+     </h1>
+
+     <!-- <h1><div>Your Journey to Coding<br class="mobile-break"> Conf</div><div>2025 Starts Here!</div></h1> -->
      <h5>  Secure your spot at next year's biggest coding conference.</h5>
      </div>
     </div>
